--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+/* avoir le dropdown qui souvent en hover */
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0; 
+}
+.prix{
+  font-size: 30px;
+}
+
+/* css pour le footer */
 .footer {
     padding:40px 0;
     background-color:#ffffff;
